# deepflame-dev

./: .gitignore  Allwmake  README.md  bashrc.raw  install.sh
applications/solvers/df0DFoam/: YEqn.H  createFields.H  df0DFoam.C  pEqn.H  pcEqn.H  setDeltaT.H
applications/solvers/df0DFoam/Make/: options
applications/solvers/dfHighSpeedFoam/: createFields.H  dfHighSpeedFoam.C  readFluxScheme.H  rhoEEqn.H  rhoUEqn.H  rhoYEqn.H
applications/solvers/dfLowMachFoam/: EEqn.H  UEqn.H  YEqn.H  YEqn_RR.H  correctPhi.H  createFields.H  dfLowMachFoam.C  pEqn.H  rhoEqn.H
docs/source/qs/: input.rst
examples/dfHighSpeedFoam/det_1D_H2_01mm/: Allclean  postProcess
examples/dfLowMachFoam/SandiaD_PaSR/: Allrun
examples/dfLowMachFoam/aachenBomb/: Allclean  postProcess
src/: design.UML
src/CanteraMixture/: CanteraMixture.C  CanteraMixture.H  CanteraSpecies.C  CanteraSpecies.H  makeThermos.C
src/CanteraMixture/Make/: files  options
src/alphatWallFunction/: alphatWallFunctionFvPatchScalarField.C
src/alphatWallFunction/Make/: files  options
src/dfChemistryModel/: dfChemistryModel.C  dfChemistryModel.H
src/dfChemistryModel/DNNInferencer/: CMakeLists.txt  DNNInferencer.H  DNNInferencer.cpp
src/dfChemistryModel/GpuInference/: CMakeLists.txt  GpuInference.H  GpuInference.cpp  GpuInference_pre.cpp  GpuProblem.H  GpuSolution.H  Inputs.H  setParameters.H  setParameters.cpp
src/dfChemistryModel/Make/: files  options
src/dfCombustionModels/Make/: options
src/dfCombustionModels/PaSR/: PaSR.C  PaSR.H
src/fvModels/Make/: files  options
(+82 files in other folders)
